--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </table>
 
     <script>
-        const API_URL = 'http://localhost:3000/api';
+        const API_URL = 'https://application-tracking-production.up.railway.app/api';
 
         // Function to add a new event
         async function addEvent(event) {
