--- a/index.html
+++ b/index.html
@@ -142,13 +142,19 @@
 
             form {
                 flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                
             }
 
             input, button {
-                width: 100%;
+                width: 97%;
                 margin-bottom: 10px;
-            }
 
+            }
+            button{
+                width:100%;
+            }
             table, thead, tbody, th, td, tr {
                 display: block;
             }
